# api/server/link/link.router.ts
@@ -1,10 +1,13 @@
 import * as express from "express";
-import Middleware from "../../middlewares/middleware";
+import linkController from "./link.controller";
 import LinkController from "./link.controller";
 
 
 const LinkRouter = express.Router()
-	.post("/vehicle/create", LinkController.createLink)
+	.post("/link/create", LinkController.createLink)
+	.get("/link/:linkID", LinkController.getLink)
+	.delete('/link/:linkID/delete', LinkController.deleteLink)
+	.patch('/link/update', LinkController.updateLink)
 	;
 
 export default LinkRouter;
